--- a/anticipate.html
+++ b/anticipate.html
@@ -19,13 +19,68 @@
   <body>
     <header class="header">
       <h1>Ducora</h1>
-      <button class="CTA">Join the waitlist</button>
+      <button class="CTA">Get Started Today</button>
     </header>
 
     <main>
-      <section class="about">
-        <h3>What Is Ducora?</h3>
-        <p></p>
+      <div class="about">
+        <div class="column-1">
+          <p>Dakuuda</p>
+          <button class="join">Join the waitlist</button>
+        </div>
+        <div class="column-2">
+          <p>Ducora is a </p>
+        </div>
+      </div>
+
+      <div class="register">
+        <form method="">
+          <p class="form-header">Join the waitlist</p>
+          <p class="form-description">Be the first to know when Ducora launches.</p>
+          
+          <div class="bio">
+            <div class="first-name">
+              <label class="label" for="first-name">First Name</label>
+              <div>
+                <input class="input" type="text" id="first-name" name="full-name" title="Please enter your first name" placeholder="First name" required>
+              </div>
+            </div>
+
+            <div class="surname">
+              <label class="label" for="surname">Surname</label>
+              <div>
+                <input class="input" type="text" id="surname" name="surname" title="Please enter your surname" placeholder="Surname" required>
+              </div>
+            </div>
+          </div>
+          
+          <div class="contact">
+            <div class="email">
+              <label class="label" for="email">Email</label>
+              <div>
+                <input class="input" type="email" id="email" name="email" title="Please enter your valid email" placeholder="Email" required>
+              </div>
+            </div>
+
+            <div class="mobile">
+              <label class="label" for="contact">Contact</label>
+              <div>
+                <input class="input" type="number"  id="contact" name="mobile-number" title="Please enter your valid mobile number" placeholder="123-456-7890" required>         
+              </div>
+            </div>
+          </div>
+
+          <div class="submit">
+            <button class="submit-button" type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+
+      <section class="footer">
+        <footer>
+          <h1>Ducora</h1>
+
+        </footer>
       </section>
     </main>
   </body>
