--- a/anticipate.html
+++ b/anticipate.html
@@ -19,14 +19,13 @@
   <body>
     <header class="header">
       <h1>Ducora</h1>
-      <button class="CTA">Get Started Today</button>
+      <a href="#register"><button class="CTA">Get Started Today</button></a>
     </header>
 
     <main>
       <div class="about">
         <div class="column-1">
           <p>Dakuuda</p>
-          <button class="join">Join the waitlist</button>
         </div>
         <div class="column-2">
           <p>Ducora is a </p>
@@ -34,7 +33,7 @@
       </div>
 
       <div class="register">
-        <form method="">
+        <form method="" id="register">
           <p class="form-header">Join the waitlist</p>
           <p class="form-description">Be the first to know when Ducora launches.</p>
           
@@ -54,7 +53,7 @@
             </div>
           </div>
           
-          <div class="contact">
+          <div class="form-contact">
             <div class="email">
               <label class="label" for="email">Email</label>
               <div>
@@ -76,12 +75,12 @@
         </form>
       </div>
 
-      <section class="footer">
+      <div class="footer">
         <footer>
-          <h1>Ducora</h1>
-
+          <h3 class="footer-heading">Ducora</h3>
+          <p class="footer-description">Plan Faster.Track Better.Teach Smarter.</p>
         </footer>
-      </section>
+      </div>
     </main>
   </body>
 </html>
