typo and color done

--- a/anticipate.html
+++ b/anticipate.html
@@ -25,10 +25,16 @@
     <main>
       <div class="about">
         <div class="column-1">
-          <p>Dakuuda</p>
+          <!-- find a better class name later -->
+          <p class="ducora-slogan">Leading With The Heart of Education.</p>
         </div>
         <div class="column-2">
-          <p>Ducora is a </p>
+          <p class="ducora-mission">
+            Teaching is more than just a job - it's a calling to lead, inspire, and transform lives. 
+            Ducora equips teachers with the tools, insights, and community to become leaders who bring out the best in every student. 
+            This isn't just a platform; it's a movement of educators dedicated to making an impact that lasts beyond the classroom walls. 
+            Join us and lead with the heart of education.
+          </p>
         </div>
       </div>
 
@@ -84,3 +90,5 @@
     </main>
   </body>
 </html>
+
+<!-- make responsive and add the email thing later -->
