--- a/anticipate.html
+++ b/anticipate.html
@@ -76,7 +76,9 @@
           </div>
 
           <div class="submit">
-            <button class="submit-button" type="submit">Submit</button>
+            <button class="submit-button" type="submit" onclick="
+              alert('Thanks for joining Ducora\'s waitlist. \n You\'ll be te first to know when we launch.');
+              ">Submit</button>
           </div>
         </form>
       </div>
@@ -90,5 +92,3 @@
     </main>
   </body>
 </html>
-
-<!-- make responsive and add the email thing later -->
