--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
           <div class="submit">
             <button class="submit-button" type="submit" onclick="
-              alert('Thanks for joining Ducora\'s waitlist. \n You\'ll be te first to know when we launch.');
+              alert('Thanks for joining Ducora\'s waitlist. \n You\'ll be the first to know when we launch.');
               ">Submit</button>
           </div>
         </form>
