Mobile Responsiveness Achieved

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           <div class="bio">
             <div class="first-name">
               <label class="label" for="first-name">First Name</label>
-              <div>
+              <div class="input-container">
                 <input class="input" type="text" id="first-name" name="full-name" title="Please enter your first name" placeholder="First name" required>
               </div>
             </div>
 
             <div class="surname">
               <label class="label" for="surname">Surname</label>
-              <div>
+              <div class="input-container">
                 <input class="input" type="text" id="surname" name="surname" title="Please enter your surname" placeholder="Surname" required>
               </div>
             </div>
@@ -62,14 +62,14 @@
           <div class="form-contact">
             <div class="email">
               <label class="label" for="email">Email</label>
-              <div>
+              <div class="input-container"> 
                 <input class="input" type="email" id="email" name="email" title="Please enter your valid email" placeholder="Email" required>
               </div>
             </div>
 
             <div class="mobile">
               <label class="label" for="contact">Contact</label>
-              <div>
+              <div class="input-container">
                 <input class="input" type="number"  id="contact" name="mobile-number" title="Please enter your valid mobile number" placeholder="123-456-7890" required>         
               </div>
             </div>
